--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -9,6 +9,13 @@
 <p>
     @Html.ActionLink("Create New", "Create", "User")
 </p>
+<form asp-action="Index" method="get">
+    <p>
+        Find by name: <input type="text" name="searchString" />
+        <input type="submit" value="Search" />
+    </p>
+</form>
+
 <table class="table">
     <tr>
         <th>
